	PR c++/68810 - wrong location for reinterpret_cast error.

* cvt.c (cp_convert_to_pointer): Always build a CONVERT_EXPR when
	!dofold.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257161 138bc75d-0d04-0410-961f-82ee72b054a4